--- a/src/style.scss
+++ b/src/style.scss
@@ -1,1 +1,8 @@
+$primary: #ff9617;
+$secondary: #b3b3b3;
+$dark: #212121;
+$black: #121212;
+
+
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
+
