--- a/templates/activity-mockup.html
+++ b/templates/activity-mockup.html
@@ -1,3 +1,9 @@
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<meta charset="UTF-8">
+		<title>Activity</title>
+<style>
 html, body {
 	height: 100%;
 	margin: 0;
@@ -45,3 +51,21 @@ a {
 #active {
 	background-color: #b26910;
 }
+</style>
+	</head>
+	<body>
+		<header>
+			<div class="bg"></div>
+			<div class="content">
+				<img src="https://cdn.discordapp.com/icons/680530391601250429/5ac1132c32de13be5112200ae3429937.webp">
+			<h1>OCC CS Club</h1>
+			</div>
+			<nav>
+			<a>Home</a>
+			<a id="active">Activity</a>
+			<a>Other nonsense</a>
+			</nav>
+		</header>
+
+	</body>
+</html>
