--- a/src/navbar/navbar.css
+++ b/src/navbar/navbar.css
@@ -10,6 +10,9 @@
 	border-bottom-color: #FF9617;
 	border-bottom-width: 2px;
 	height: 60px;
+	position:sticky;
+	top: 0;
+    z-index: 1;
 }
 
 .middle-items {
