--- a/src/style.scss
+++ b/src/style.scss
@@ -1,1 +1,8 @@
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
+* {
+    margin: 0;
+    padding: 0;
+}
+body {
+    background-color: #212121;
+}
