--- a/src/navbar/navbar.css
+++ b/src/navbar/navbar.css
@@ -62,17 +62,16 @@
 	justify-content: center;
 	align-items: center;
 	font-weight: bold;
-	padding: 5px;
 }
 
 /* <Link> */
 .navbar-link {
-	float: center;
 	color: #212121;
-	padding: 10px;
 	font-size: 24px;
 	text-align: center;
 	text-decoration: none;
+	padding: 1.1rem;
+	margin: 10px;
 }
 
 /* <Link> */
@@ -88,7 +87,9 @@
 	display: none;
 	position: absolute;
 	background-color: #fff;
-	margin-top: 0.5rem;
+	margin: 10px;
+	margin-top: 16px;
+	width: inherit;
 	min-width: 8rem;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 	z-index: 1;
