--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
 	height: 100vh;
 	width: 100vw;
 	margin: 0;
@@ -40,4 +41,3 @@ a {
 #active {
 	background-color: #b26910;
 }
-
