--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,7 @@ body {
 	width: 100vw;
 	margin: 0;
 	padding: 0;
-	background: url("./asset/images/background.jpg") no-repeat;
+	background-color: #21262d;
 	background-size: cover;
 }
 
