--- a/src/navbar/navbar.css
+++ b/src/navbar/navbar.css
@@ -108,7 +108,6 @@
 	border-radius: 4px;
 }
 
-
 /* <div> dropdown box */
 .dropdown-content {
 	display: none;
@@ -133,7 +132,6 @@
 	display: block;
 }
 
-
 /* <Link> */
 .dropdown-link:hover {
 	color: #fff;
@@ -145,7 +143,6 @@
 	display: block;
 }
 
-
 /* End of Navbar Component Section */
 
 .nav-toggle-icons {
@@ -155,15 +152,10 @@
 	z-index: 20;
 }
 
-.dropdown:hover .dropdown-content + .navbar-link, .navbar-link:hover {
+.dropdown:hover .dropdown-content + .navbar-link,
+.navbar-link:hover {
 	color: #fff;
 	background-color: rgb(190, 114, 0);
 	transition: 0.3s background-color ease-out;
 	border-radius: 4px;
-  }
-/*
-.header {
-	background-color: red;
-	border: 5px solid rgb(190, 114, 0);
 }
-*/
