--- a/src/resources/resources.css
+++ b/src/resources/resources.css
@@ -18,7 +18,8 @@
 	margin: auto;
 	margin-top: 6rem;
 	width: 80%;
-	height: 1000px;
+	min-height: 75rem;
+	height: auto;
 	z-index: 3;
 }
 
@@ -68,7 +69,7 @@
 
 .resources-content {
 	color: white;
-	padding: 3rem 12% 2rem 12%;
+	padding: 2rem 3rem 2rem 3rem;
 	display: none;
 	justify-content: center;
 	border-radius: 20px;
@@ -81,9 +82,77 @@
 	display: block;
 }
 
+/* TODO: Add pagination css */
 .pagination-container {
 	margin: auto;
-	display: flex;
 }
 
-/* TODO: Add pagination css */
+/* List Buttons To Render Items from Database */
+.resource-list-item {
+	display: flex;
+	flex-direction: column;
+	padding-left: 0rem;
+}
+
+.resource-list-title {
+	position: relative;
+	text-align: left;
+	display: block;
+	padding: 2rem 0.75rem 2rem 0.75rem;
+	color: white;
+	background-color: transparent;
+	border: 0;
+	border-bottom: 2px solid #ccc;
+	font: 1.3rem serif;
+	transition: all 300ms;
+}
+
+.resource-list-title:hover {
+	color: #ff9617;
+	z-index: 1;
+	text-decoration: none;
+}
+
+.resource-list-title-active {
+	background-color: #535353;
+	border-bottom: 0px;
+	transition: all 300ms;
+}
+
+.resource-list-description {
+	list-style: none;
+	position: relative;
+	max-height: 0;
+	opacity: 0;
+	padding-left: 0.75rem;
+	white-space: pre-line; /* Enables newline characters in JSX */
+	transition: all 300ms ease; /* controls fade out */
+	transform-origin: top center; /* Content expands downward from top */
+}
+
+.resource-list-description-active {
+	max-height: 50rem; /* Large number that the height should never reach */
+	opacity: 1;
+	padding: 2rem 0.75rem 2rem 0.75rem;
+	animation: growDown 300ms ease-in-out forwards;
+	border: 0;
+	border-bottom: 2px solid #ccc;
+}
+
+@keyframes growDown {
+	0% {
+		transform: scaleY(0);
+	}
+	80% {
+		transform: scaleY(1.1); /* The bounce makes it look snappy */
+	}
+	100% {
+		transform: scaleY(1);
+	}
+}
+
+/* Formats links */
+a.resource-link {
+	color: #ff9617;
+	padding: 0em;
+}
