--- a/client/src/pages/home/components/contact-us/contact-us.css
+++ b/client/src/pages/home/components/contact-us/contact-us.css
@@ -1,7 +1,8 @@
 .contact-container {
-	max-width: 960px;
+	max-width: 920px;
 	width: 80%;
 	margin: 2rem auto;
+	padding: 1rem 0;
 	font-size: 16px;
 	color: white;
 }
@@ -13,6 +14,7 @@
 
 .contact-header {
 	display: flex;
+	padding: 0 2rem;
 }
 
 .contact-header h1 {
@@ -20,7 +22,7 @@
 	margin: 1rem auto;
 	max-width: 200px;
 	width: 100%;
-	padding: 5px 10px;
+	padding: 5px 2rem;
 	font-size: 40px;
 	font-weight: bold;
 	color: #000;
@@ -36,6 +38,10 @@
 	width: 100%;
 	height: 5px;
 	background-color: #ff9e3d;
+}
+
+.contact-content {
+	padding: 0 2rem;
 }
 
 .icon-list {
@@ -101,6 +107,28 @@ a#form {
 
 a#form:hover {
 	color: #2196f3;
+}
+
+@media only screen and (max-width: 960px) {
+	.contact-container {
+		width: 90%;
+	}
+	.contact-header {
+		padding: 0 1rem;
+	}
+	.contact-content {
+		padding: 0 1rem;
+	}
+}
+
+@media only screen and (max-width: 760px) {
+	.contact-header {
+		margin: 0.5rem auto;
+		padding: 0;
+	}
+	.contact-content {
+		padding: 0;
+	}
 }
 
 @media only screen and (max-width: 548px) {
